# ceres_opencv_boost-docker

./: .gitignore  Dockerfile  README.md
hello_ceres/: CMakeLists.txt
hello_ceres_opencv_boost/: CMakeLists.txt  hello_ceres_opencv_boost.cc
